tests/valid/21_void_unit.ml
void f() {
    return;
}

unit g() {
    return;
}

int main() {
    f();
    g();

    return 0;
}
