tests/invalid/15_uint_main.ml
uint main() {
    return 0;
}
